--- a/setting/config.json
+++ b/setting/config.json
@@ -1,4 +1,9 @@
 {
-	"keyopenai": "YOUR_APIKEY",
+	"keyopenai": "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",
 	"autoAI": true
-}
+{       "Keyopenai": "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",
+        "autoAI": true
+}       "keyopenai": "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",
+        "autoAI": true
+ }       "Keyopenai": "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",
+        "autoAI": true
